<resources>
    <string name="couldnt_connect_to_server">Server communication failed.</string>
    <string name="app_logo" translatable="false">App logo</string>
    <string name="host">Host</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="configure_the_host_address_of_the_server">Configure the host address of the Y-Check server to connect to.</string>
    <string name="network_access_configuration">Server Configuration</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create a new account.</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="toggle_password_visibility">Toggle  password visibility</string>
    <string name="username">Username</string>
    <string name="login_instructions">Kindly provide your Y-Check credentials that are associated with the currently connected server.</string>
    <string name="configuration">Configuration</string>
    <string name="username_required">Username and password are required.</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="register_instruction">Choose a username and a strong password.</string>
    <string name="show_hide_password_instruction">Press the eye icon to show/hide password.</string>
    <string name="register">Register</string>
    <string name="security_question_instruction">Please provide your answers to these questions to assist in resetting your password in case you forget it.</string>
    <string name="security_question_2">What was the name of your first pet?</string>
    <string name="security_question_1">What is your mother\'s maiden name?</string>
    <string name="save">Save</string>
    <string name="security_answers_required">Please answer both questions.</string>
    <string name="profile_updated_successfully">Profile updated successfully.</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile_instruction">Please update your profile.</string>
    <string name="enter_your_surname">Enter your surname.</string>
    <string name="please_enter_surname">Please enter surname.</string>
    <string name="enter_other_names">Enter other names</string>
    <string name="enter_your_other_names">Enter your other names</string>
    <string name="other_names">Other Names</string>
    <string name="surname">Surname</string>
    <string name="enter_host_name_with_protocol">Enter host address with protocol.</string>
    <string name="e_g_http_232_43_22_33_8000">e.g., http://232.43.22.33:8000</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="old_new_password_required_instruction">Please enter your old and new passwords.</string>
    <string name="basic">Basic</string>
    <string name="secondary">Secondary</string>
    <string name="community">Community</string>
    <string name="initial">Initial</string>
    <string name="implementation">Implementation</string>
    <string name="study_phase">Study Phase</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="choose_checkup_location">Choose check-up location</string>
    <string name="location_loading_error">An error occurred while loading locations.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="check_up_location">Check-up Location</string>
    <string name="search">Search</string>
    <string name="search_result">Search result</string>
    <string name="go">Go</string>
    <string name="no_results_found">No results found.</string>
    <string name="edit_details">Edit Details</string>
    <string name="open_camera">Open Camera</string>
    <string name="upload">Upload</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile_complete">Profile complete</string>
    <string name="screening_test">STATION 3A: Psychosocial Screening</string>
    <string name="enter_assessment_values">STATION 3B: Physical Examination</string>
    <string name="welcome">Welcome!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="next_question">Next Question</string>
    <string name="done">Done</string>
    <string name="survey_completion_info">Please handover the tablet to the research assistant now.</string>
    <string name="feedback_form_access_info">If you\'re the research assistant, kindly tap the button below to provide feedback on this survey.</string>
    <string name="feedback">Feedback</string>
    <string name="survey_completed_successfully">Survey completed successfully.</string>
    <string name="invalid_username">Invalid username</string>
    <string name="adolescent_not_found">Adolescent not found.</string>
    <string name="no_more_questions">You have successfully completed all the questions in this survey.</string>
    <string name="play_game_confirmation">Would you like to take a break by playing a game?</string>
    <string name="yes_adolescent_consent">Yes adolescent assent</string>
    <string name="yes_adolescent_parent_consent">Yes adolescent and parent consent</string>
    <string name="yes_parental_consent">Yes parental consent</string>
    <string name="confirmation_of_consent_form_received">Confirmation of consent form received</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="choose_activity">Choose an activity below to begin …</string>
    <string name="what_todo">What would you want to do today?</string>
    <string name="hi">Hi</string>
    <string name="new_adolescent_instruction">Enroll a new adolescent to complete the screening tests.</string>
    <string name="search_adolescent">Search Adolescent</string>
    <string name="search_adolescent_instruction">Search for adolescent and update or enter assessment records.</string>
    <string name="home_screen_background_image">Home screen background image</string>
    <string name="pid_is_required">PID is required.</string>
    <string name="surname_is_required">Surname is required.</string>
    <string name="other_names_are_required">Other names are required.</string>
    <string name="invalid_age">Invalid age</string>
    <string name="proceed">Proceed</string>
    <string name="lap_result">Lap result</string>
    <string name="noted_continue">Noted, continue</string>
    <string name="feedback_form_access_instruction">Please enter the username of the currently authenticated user to access feedback form.</string>
    <string name="access_form">Access form</string>
    <string name="welcome_to_y_check">Welcome to Y-Check</string>
    <string name="picture_of_adolescent_playing">Picture of adolescent playing</string>
    <string name="start">Start</string>
    <string name="enter_pid_or_name">Enter PID or name</string>
    <string name="feeling_bored">Feeling bored? We\'ve got a game for you.</string>
    <string name="play_it_now">Play it now.</string>
    <string name="take_photo_instruction">Open camera to take a picture of the adolescent.</string>
    <string name="end_survey">Are you sure you want to exit the survey?</string>
    <string name="ok">OK</string>
    <string name="hello_person">Hello %1$s !</string>
    <string name="pilot">Pilot</string>
    <string name="school_loading_error">An error occurred while loading school.</string>
    <string name="which_school">Which school does the adolescent attend?</string>
    <string name="boarding">Boarding</string>
    <string name="day">Day</string>
    <string name="residential_status">Residential Status</string>
    <string name="grade_1">Year 1</string>
    <string name="grade_2">Year 2</string>
    <string name="young_person_s_grade">Young person\'s grade</string>
    <string name="select_type_of_adolescent">Select type of adolescent.</string>
    <string name="leaves_in_catchment_area">Leaves in catchment area.</string>
    <string name="n_a">N/A</string>
    <string name="adolescent_parent_consent"><![CDATA[Adolescent & parent consent]]></string>
    <string name="form_is_not_valid">Form is not valid.</string>
    <string name="please_confirm_consent">Please confirm consent</string>
    <string name="total_session_hint">Welcome to Y-Check! This screening tool has 11 parts, each of which takes about 2 minutes. There will be a short break after part 5 and we will play a small game together. Your answers will be kept confidential and your name will not be written anywhere on this screening test. \n\nTap continue to begin.</string>
    <string name="sex">Sex</string>
    <string name="please_choose_one">Please choose one.</string>
    <string name="_3_navigate_questions_using_previous_or_next_buttons">3. Navigate questions using the previous or next buttons.</string>
    <string name="_2_tap_the_speaker_icon_next_to_the_question_or_option_to_hear_a_friendly_lady_read_the_text_aloud">2. Tap the speaker icon next to the question or option to hear a friendly lady read the text aloud.</string>
    <string name="_1_pick_the_options_that_fit_you_for_each_question_they_re_multiple_choice">1. Pick the options that fit you for each question—they\'re multiple choice!</string>
    <string name="please_read_me">Please read me</string>
    <string name="next_answered_question">Next answered question.</string>
    <string name="close_test">Close test</string>
    <string name="lab_assessment">STATION 2: Laboratory Test</string>
    <string name="clinical_assessment">STATION 4B: Clinical Assessment</string>
    <string name="pre_screening_assessment">STATION 3A: Pre-screening Assessment</string>
    <string name="pid">PID</string>
    <string name="y_check_services_research"><![CDATA[Y-Check Services & Research]]></string>
    <string name="y_check_services_only">Y-Check Services Only</string>
    <string name="parental_adolescent_assent_error_message">Parental consent and adolescent assent is required for adolescent under 18 years.</string>
    <string name="register_adolescent">Register Adolescent</string>
    <string name="please_check_form_for_errors">Please check form for errors.</string>
    <string name="checkup_reason">Check-up Reason</string>
    <string name="adolescent_added_successfully">Adolescent added successfully.</string>
    <string name="paged_registration">Paged Registration</string>
    <string name="single_view_registration">Single View Registration</string>
    <string name="age">Age</string>
    <string name="thank_you">Thank you.</string>
    <string name="access_feedback_form">Access Feedback Form</string>
    <string name="no_adolescent_found">No adolescent found.</string>
    <string name="please_respond_to_continue">Please respond to continue.</string>
    <string name="game_available">Game Available</string>
    <string name="exit">Exit</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="enter_adolescent_arrival_time">Please enter the time the adolescent arrived at this station.</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_your_station_or_edit_adolescent_details">Please select your station or edit adolescent details.</string>
    <string name="new_picture">New Picture</string>
    <string name="from_camera">From Camera</string>
    <string name="invalid_image">Invalid image</string>
    <string name="adolescent_s_profile_setup_is_complete_your_id_is">Adolescent\'s profile setup is complete. Adolescent ID is %1$s</string>
    <string name="year_old_adolescents_are_not_eligible_for_this_exercise">%1$d-year-old %2$s adolescents are not eligible for this exercise.</string>
</resources>