<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/baseline_settings_24"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/baseline_person_24"
        android:orderInCategory="1"
        android:title="@string/profile"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_lock_24"
        android:orderInCategory="2"
        android:title="@string/logout"
        app:iconTint="@color/white"
        app:showAsAction="never" />
</menu>