<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pre_screening_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/pre_screening_assessment"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_question_answer_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/border_color" />


        <TextView
            android:id="@+id/screening_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/screening_test"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_question_answer_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/physical_assessment_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/enter_assessment_values"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_health_and_safety_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/lab_assessment_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/lab_assessment"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_health_and_safety_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/clinical_assessment_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/clinical_assessment"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_health_and_safety_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/border_color" />

        <TextView
            android:id="@+id/edit_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/edit_details"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_edit_24" />

    </LinearLayout>
</FrameLayout>
