<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ui.authentication.RegistrationActivity">

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/configuration"
            android:foreground="?android:selectableItemBackgroundBorderless"
            android:foregroundTint="@color/text_color"
            android:src="@drawable/baseline_settings_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_button">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_logo"
                android:foregroundTint="@color/text_color"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_instruction" />

                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:background="@drawable/round_rect_shape"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/text_color"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_hide_password_instruction" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_rect_shape"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/text_color"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="5dp" />

                    <ImageButton
                        android:id="@+id/toggle_password_visibility_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:layout_weight="9"
                        android:background="@drawable/baseline_remove_red_eye_24"
                        android:backgroundTint="@color/text_color"
                        android:clickable="true"
                        android:contentDescription="@string/toggle_password_visibility"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:padding="4dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/error_message_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/color_warning"
                    android:visibility="gone"
                    tools:text="Error message"
                    tools:visibility="visible" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="50dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        tools:enabled="false" />

                    <ProgressBar
                        android:id="@+id/login_loading_process_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/login_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/already_have_account"
                    android:textAlignment="center"
                    android:textColor="@color/color_700" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>